fixes alignment of inline error messages

--- a/src/style/partials/_form.scss
+++ b/src/style/partials/_form.scss
@@ -194,7 +194,7 @@ label + .inline-parent                          { margin-top:6px; }
 .inline-parent textarea, 
 .inline-parent select, 
 .inline-parent .select                          { width:100%; }
-.inline-parent .inline-child                    { margin:0 20px 0 0; max-width:100%; display:flex; flex:1; flex-direction:column; vertical-align:bottom; align-self:flex-end;
+.inline-parent .inline-child                    { margin:0 20px 0 0; max-width:100%; display:flex; flex:1; flex-direction:column; vertical-align:bottom; align-self:flex-start;
    label+*                                      { margin-top:6px; }
 }
 .inline-parent .inline-child + * 		  		   { margin-top:20px; }
